fixing the message input form

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
         </div>
 
         <div>
+            <label for="address">Comment : </label>
+            <input name="comment[].id" id="address" value="Mom">
+            <input name="comment[].message" id="address" value="Mom">
+        </div>
+
+        <div>
             <button>Send my greetings</button>
         </div>
     </form>
