fixing the form

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
         <div>
             <label for="address">Comment : </label>
-            <input name="comment[].id" id="address" value="Mom">
-            <input name="comment[].message" id="address" value="Mom">
+            <input name="comment[][id]" id="id" value="Mom">
+            <input name="comment[][message]" id="message" value="Mom">
         </div>
 
         <div>
