--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <form action="http://localhost:8080/person" method="post">
+    <form action="http://localhost:8080/user" method="post">
         <div>
             <label for="user">name</label>
             <input name="name" id="name" value="Hi">
